// order-service/proto/order/order.proto
syntax = "proto3";

package order; 

service OrderService {
  rpc CreateOrder(Order) returns (Response) {}
  rpc GetOrders(GetRequest) returns (Response) {}
}

message Order {
  string id = 1;
  string description = 2;
  int32 price = 3;
  repeated Item items = 4;
  string courir_id = 5;
}

message Item {
  string id = 1;
  int32 price = 2;
  string name = 3;
}

message GetRequest {}

message Response {
  bool created = 1;
  Order order = 2;
  repeated Order orders = 3;
}